# diskrush

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: app.rs  drives.rs  headless.rs  history.rs  main.rs
src/bench/: engine.rs  mod.rs  platform.rs
src/ui/: drives.rs  footer.rs  header.rs  mod.rs  results.rs  settings.rs  theme.rs
